--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -126,7 +126,7 @@ nav{
     border:1px solid white;
     font-size: 25px;
     border-radius: 0px;
-    background-color: #fffefd;
+    background-color: #f5f5f5;
     transform-origin: left;
     color:black;
     border-radius: 40px ;
