--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -1,20 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Redacted+Script:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
-
-@font-face {
-  font-family: 'WallSmith';
-  src: url(./assets/Wallsmith-Regular.ttf);
-  font-style: normal;
-}
 *{
-   
-/* background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(2,2,79,1) 55%, rgba(7,1,99,1) 100%);
-height:100%; */
-color:white;
-font-family: 'Jost', sans-serif;
+    color:white;
+    font-family: 'Jost', sans-serif;
 }
 #Landing{
     margin: -8px;
@@ -262,10 +248,10 @@ button:hover{
 
 /******************* Recent-Blogs**************** */
 
-#recent{
+/* #recent{
     /* height:100vh; */
-    /* background-color: #e5e5e5; */
-}
+    /* background-color: #e5e5e5; 
+} */
 .recent-wrap>h2{
     color:black;
     font-weight: 400;
@@ -295,8 +281,8 @@ button:hover{
 .row{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     flex-wrap: wrap;
     transform: translateX(-3vw);
 }
