--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -62,13 +62,26 @@ nav{
 .nav-list>li>a:hover::after{
     transform:scaleX(1);
 }
+.hamburger {
+    display: none;
+}
 
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #f8bf8c;
+}
 .name{
     color:white;
     font-family: 'Jost', sans-serif;
     font-size: 48.7px;
     margin-left: 20px;  
     font-family: 'IBM Plex Sans', sans-serif;
+    text-decoration: none;
 }
 .name>span{
     color:#f8bf8c;
@@ -273,7 +286,9 @@ button:hover{
 .follow-cards{
     display: flex;
     flex-direction: row;
-    margin:20px;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    /* margin-left: 40px; */
 }
 .row{
     display: flex;
@@ -281,6 +296,8 @@ button:hover{
     /* align-items: center; */
     /* justify-content: center; */
     flex-wrap: wrap;
+    /* margin-left: 100px; */
+    margin-bottom: 30px;
     transform: translateX(-3vw);
 }
 
@@ -394,4 +411,51 @@ footer{
     align-items: center;
     justify-content: center;
     padding-top: 30px;
+}
+
+/* media queries  */
+@media only screen and (max-width: 768px) {
+    .nav-list {
+        position: fixed;
+        left: -150%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+        overflow: hidden;
+    }
+
+    .nav-list.active {
+        background-color: #252525;
+        left: 0;
+        overflow: hidden;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+
 }
