--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -9,7 +9,15 @@
     background: #252525;
     height:100vh;
 }
-
+b{
+    color:black;
+}
+.blog-content-description>div{
+    color: black;
+}
+.blog-content-description>div>div{
+    color: black;
+}
 /******* nav bar ******/
 
 nav{
