--- a/client/User/style.css
+++ b/client/User/style.css
@@ -1,22 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Redacted+Script:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
-
-@font-face {
-  font-family: 'WallSmith';
-  src: url(./assets/Wallsmith-Regular.ttf);
-  font-style: normal;
-}
 *{
-   
-/* background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(2,2,79,1) 55%, rgba(7,1,99,1) 100%);
-height:100%; */
-color:white;
-font-family: 'Jost', sans-serif;
-margin: 0;
-padding: 0;
+    background-color: #252525;
+    font-family: 'Jost', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #f1f1f1;
 }
 #Landing{
     margin: -8px;
@@ -32,7 +19,20 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #252525;
+}
+
+nav .logo img{
+    display: inline;
+    color: white;
+    height: 65px;
+    width: 65px;
+    margin-left: 45px;
+    position: relative;
+    top: 15px;
+}
+
+nav a:first-child{
+    margin-left:100px;
 }
 .nav-list{
     list-style: none;
@@ -43,16 +43,14 @@ nav{
 }
 .nav-list>li{
     margin:10px;
-    padding-right:30px;
-    margin-right: 40px;
-    font-size: 23px;
-
+    /* padding-right:15px; */
+    margin-right: 20px;
+    font-size: 1.4rem;
 }
 .nav-list>li>a{
     text-decoration: none;
     color:white;
     font-family: 'Jost', sans-serif;
-
     position:relative;
     display: inline-block;
 }
@@ -79,13 +77,26 @@ nav{
 .nav-list>li>a:hover::after{
     transform:scaleX(1);
 }
+.hamburger {
+    display: none;
+}
 
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #f8bf8c;
+}
 .name{
     color:white;
     font-family: 'Jost', sans-serif;
     font-size: 48.7px;
     margin-left: 20px;  
     font-family: 'IBM Plex Sans', sans-serif;
+    text-decoration: none;
 }
 .name>span{
     color:#f8bf8c;
@@ -105,6 +116,10 @@ nav{
     z-index:999;
     opacity:0.4
 }
+nav img{
+    color: white;
+}
+
 
 
 /***************profile-user-img************************/
@@ -199,116 +214,6 @@ nav{
     margin-left: 12px;
     transform: translate(7px,-100px);
     background-size: cover;
-}
-
-
-
-
-
-/*************************************************/
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Redacted+Script:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
-
-@font-face {
-  font-family: 'WallSmith';
-  src: url(./assets/Wallsmith-Regular.ttf);
-  font-style: normal;
-}
-*{
-   
-/* background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(2,2,79,1) 55%, rgba(7,1,99,1) 100%);
-height:100%; */
-color:white;
-font-family: 'Jost', sans-serif;
-}
-#Landing{
-    margin: -8px;
-    overflow-x: hidden;
-    /* padding:0; */
-    background: #252525;
-    height:100vh;
-}
-
-/******* nav bar ******/
-
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav-list{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
-.nav-list>li{
-    margin:10px;
-    padding-right:30px;
-    margin-right: 40px;
-    font-size: 23px;
-
-}
-.nav-list>li>a{
-    text-decoration: none;
-    color:white;
-    font-family: 'Jost', sans-serif;
-
-    position:relative;
-    display: inline-block;
-}
-.nav-list>li>a::before,
-.nav-list>li>a::after{
-    content:'';
-    position:absolute;
-    left: 0;
-    width:100%;
-    height:2px;
-    background-color: #f8bf8c;
-    transform: scaleX(0);
-    transition: transform 0.25s ;
-}
-.nav-list>li>a::before{
-    top:-3px;
-    transform-origin: left;
-}
-.nav-list>li>a::after{
-    bottom:-3px;
-    transform-origin: right;
-}
-.nav-list>li>a:hover::before,
-.nav-list>li>a:hover::after{
-    transform:scaleX(1);
-}
-
-.name{
-    color:white;
-    font-family: 'Jost', sans-serif;
-    font-size: 48.7px;
-    margin-left: 20px;  
-    font-family: 'IBM Plex Sans', sans-serif;
-}
-.name>span{
-    color:#f8bf8c;
-    font-family: 'Freehand', cursive;
-}
-.input{
-    background: none;
-    border:1px solid #f8bf8c;
-    margin-right: 20px;
-    border-radius: 30px;
-    padding:8.2px;
-    padding-left: 30px;
-}
-.fa-search{
-    position: relative;
-    left:24px;
-    z-index:999;
-    opacity:0.4
 }
 
 /****** upper-body ******/
