--- a/client/category/style.css
+++ b/client/category/style.css
@@ -148,6 +148,8 @@ nav img{
 
 
 
+
+
 .recent-wrap>h2{
     color:black;
     font-weight: 400;
@@ -236,7 +238,7 @@ nav img{
     color: black;
 }
 .fa-solid{
-    margin-left: 82.5px;
+    margin-left: 132px;
     cursor: pointer;
     user-select: none;
 }
@@ -343,4 +345,55 @@ footer{
     align-items: center;
     justify-content: center;
     padding-top: 30px;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .nav-list {
+        position: fixed;
+        left: -150%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-list.active {
+        background-color: #252525;
+        left: 0;
+        overflow: hidden;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .fa-search{
+        position: relative;
+        margin-right: 200px;
+        top: 26px;
+    }
+
+
 }
