--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -261,7 +261,10 @@ button:hover{
     background-color: rgba(0,0,0,.3);
     padding:3px 9px;
     border-radius: 5.2px;
-
+    /* text-decoration: none; */
+}
+.tags li a {
+    text-decoration: none;
 }
 #latest-blog-section{
     background-color: #252525;
@@ -276,8 +279,22 @@ button:hover{
     transform: translate(7px,-125px);
     background-size: cover;
 }
+.bookmark{
+    display: flex;
+    position: absolute;
+    height:20px;
+    width: 399px;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    transform: translateX(-35px);
+}
 .fa-regular{
-    margin-left: 82.5px;
+    position: inherit;
+    left: 100%;
+    right: 0;
+    /* float: right; */
+    /* margin-left: 125px; */
     cursor: pointer;
     user-select: none;
 }
@@ -285,6 +302,10 @@ button:hover{
     margin-left: 82.5px;
     cursor: pointer;
     user-select: none;
+}
+.tags .fa-regular{
+    float: right;
+
 }
 .fa-regular:hover, .fa-solid:hover {
     color: #f8bf8c;
