--- a/client/User/style.css
+++ b/client/User/style.css
@@ -195,6 +195,9 @@ nav{
     font-weight: 400;
     padding-left: 3%;
 }
+#categories>h2{
+    color:black;
+}
 #categories h2 span{
     color: #f8bf8c;
 }
@@ -230,7 +233,7 @@ nav{
     text-align: center;
 }
 .cat .cat-name span{
-    color: #ffffff;
+    color: #000000;
     font-size: 1.4rem;
     font-weight: 500;
     /* text-align: center; */
@@ -248,6 +251,12 @@ nav{
 .latest-cards{
     height:1000px;
     color:black;
+    /* margin-left: 5vw;; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 }
 .author{
     height: 50px;
