--- a/client/User/style.css
+++ b/client/User/style.css
@@ -252,6 +252,9 @@ nav img{
 }
 
 /******************* myblogs ****************/
+#myblogs{
+    background-color: #f5f5f5;
+}
 .blog-header{
     color:black;
     font-size: 30px;
@@ -261,6 +264,7 @@ nav img{
     color:#ff9d47;
 }   
 .latest-cards{
+    background-color: #f5f5f5;
     height:1000px;
     color:black;
 }
@@ -443,14 +447,24 @@ button:hover{
 
 
 /******************* Recent-Blogs**************** */
-
+#recent1{
+    background-color: #f5f5f5;
+}
+#recent2{
+    background-color: #f5f5f5;
+}
+.recent-wrap{
+    background-color: #f5f5f5;
+}
 .recent-wrap>h2{
+    background-color: #f5f5f5;
     color:black;
     font-weight: 400;
     margin:10px 70px;
     font-size: 2rem;
 }
 .recent-wrap>h2>span{
+    background-color: #f5f5f5;
     color:#ffa556
 }
 .desc-white{
