--- a/client/User/style.css
+++ b/client/User/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: #252525;
+    /* background-color:#f5f5f5; */
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
@@ -16,6 +16,7 @@
 /******* nav bar ******/
 
 nav{
+    background-color: #252525;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -210,9 +211,6 @@ nav img{
     font-weight: 400;
     padding-left: 3%;
 }
-#categories>h2{
-    color:black;
-}
 #categories h2 span{
     color: #f8bf8c;
 }
@@ -248,16 +246,13 @@ nav img{
     text-align: center;
 }
 .cat .cat-name span{
-    color: #000000;
+    color: #ffffff;
     font-size: 1.4rem;
     font-weight: 500;
     /* text-align: center; */
 }
 
 /******************* myblogs ****************/
-#myblogs{
-    background-color: #f5f5f5;
-}
 .blog-header{
     color:black;
     font-size: 30px;
@@ -267,15 +262,8 @@ nav img{
     color:#ff9d47;
 }   
 .latest-cards{
-    background-color: #f5f5f5;
     height:1000px;
     color:black;
-    /* margin-left: 5vw;; */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
 }
 .author{
     height: 50px;
@@ -456,24 +444,14 @@ button:hover{
 
 
 /******************* Recent-Blogs**************** */
-#recent1{
-    background-color: #f5f5f5;
-}
-#recent2{
-    background-color: #f5f5f5;
-}
-.recent-wrap{
-    background-color: #f5f5f5;
-}
+
 .recent-wrap>h2{
-    background-color: #f5f5f5;
     color:black;
     font-weight: 400;
     margin:10px 70px;
     font-size: 2rem;
 }
 .recent-wrap>h2>span{
-    background-color: #f5f5f5;
     color:#ffa556
 }
 .desc-white{
