category page(very minor change left

--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -330,7 +330,7 @@ button:hover{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
 }
 .category-wrap .cat{
