--- a/client/User/style.css
+++ b/client/User/style.css
@@ -177,12 +177,16 @@ nav{
     justify-content: center;
     align-items: center;
 }
-/****************Followers**********/
-/**************** Categories names  *******************/
+
+/* //SHOW FOLLOWERS AND FOLLOWINGS */
+#follow-following{
+    background: #252525;
+    /* display: flex;
+    flex-direction: row; */
+}
 #categories{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width:100vw;
+    /* margin-top: 50px; */
+    width:50vw;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -249,7 +253,7 @@ nav{
     color:#ff9d47;
 }   
 .latest-cards{
-    height:1000px;
+    /* height:1000px; */
     color:black;
     /* margin-left: 5vw;; */
     display: flex;
@@ -547,12 +551,16 @@ button:hover{
 
 
 /******************* Recent-Blogs**************** */
-
+#recent{
+    /* height:auto; */
+    /* height:auto; */
+}
 .recent-wrap>h2{
     color:black;
     font-weight: 400;
     margin:10px 70px;
     font-size: 2rem;
+    position:relative;
 }
 .recent-wrap>h2>span{
     color:#ffa556
@@ -616,5 +624,4 @@ button:hover{
     cursor: pointer;
 }
 
-/****************footer**************/
 
